--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         </div>
     </div>
 
-    {{-- <section>
+    <!-- <section>
         <h1 id="greeting"></h1>
 
         <div id="buttons">
@@ -183,7 +183,7 @@
         <pre id="initData"></pre>
         <h3>Init Data (unsafe): </h3>
         <pre id="initDataUnsafe"></pre>
-    </section> --}}
+    </section> -->
 
     <script type="application/javascript">
         Telegram.WebApp.ready();
