--- a/index.html
+++ b/index.html
@@ -264,11 +264,11 @@
                 cartObj[id][0] = cartObj[id][0] * count
                 $(this).parents('.footer').siblings('.image-cont').children(".count").text(count);
             }
-        })
+        });
 
-        Telegram.WebApp.onEvent('mainButtonClicked', function(){
-            Telegram.WebApp.sendData("some string that we need to send"); 
-        })
+        Telegram.WebApp.onEvent("mainButtonClicked", function(){
+            tg.sendData('wecwcwewcw');
+        });
     
     </script>
 </body>
