--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
             }
         });
 
-        Telegram.WebApp.onEvent("mainButtonClicked", function(){
+        window.Telegram.WebApp.onEvent("mainButtonClicked", function(){
             tg.sendData('wecwcwewcw');
         });
     
