--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
         });
 
         window.Telegram.WebApp.onEvent("mainButtonClicked", function(){
-            tg.sendData('wecwcwewcw');
+            window.Telegram.WebApp.sendData('wecwcwewcw');
         });
     
     </script>
