--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
             }
         });
 
-        window.Telegram.WebApp.onEvent("mainButtonClicked", function(){
+        Telegram.WebApp.onEvent("mainButtonClicked", function(){
             window.Telegram.WebApp.sendData('wecwcwewcw');
         });
     
