--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
     </section> -->
 
     <script type="application/javascript">
-        let tg = window.tg.expand();
+        let tg = window.Telegram.WebApp.expand();
 
         let data = $('.item');
         var cart = {};
