--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 
     <script>
         let tg = window.Telegram.WebApp;
-        tg.expand()
+        tg.ready()
 
         let data = $('.item');
         var cart = {};
