--- a/index.html
+++ b/index.html
@@ -16,13 +16,6 @@
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
-    <script>
-        function setThemeClass() {
-            document.documentElement.className = tg.colorScheme;
-        }
-        tg.onEvent('themeChanged', setThemeClass);
-        setThemeClass();
-    </script>
     <style>
         * {
             margin: 0;
@@ -189,6 +182,12 @@
     <script>
         let tg = window.Telegram.WebApp;
         tg.expand()
+
+        function setThemeClass() {
+            document.documentElement.className = tg.colorScheme;
+        }
+        window.Telegram.WebApp.onEvent('themeChanged', setThemeClass);
+        setThemeClass();
 
         let data = $('.item');
         var cart = {};
