--- a/index.html
+++ b/index.html
@@ -181,95 +181,97 @@
 
     <script>
         let tg = window.Telegram.WebApp;
+
         tg.expand()
 
-        function setThemeClass() {
+        window.Telegram.WebApp.onEvent('themeChanged', function () {
             document.documentElement.className = tg.colorScheme;
-        }
-        window.Telegram.WebApp.onEvent('themeChanged', setThemeClass);
-        setThemeClass();
+        });
 
-        let data = $('.item');
-        var cart = {};
-        $.each(data, function (index, value) {
-            let id = $(value).attr('data-id')
-            let price = $(value).attr('data-price')
-            cart[id] = [price, 1]
-        })
+        // tg.onEvent('themeChanged', function () {
+        //     document.querySelector('#themeData').innerHTML = JSON.stringify(tg.themeParams, null, 2);
+        // });
 
-        var jsonStr = JSON.stringify(cart);
-        sessionStorage.setItem("cart", jsonStr);
-        var cartValue = sessionStorage.getItem("cart");
-        var cartObj = JSON.parse(cartValue);
+        Telegram.WebApp.onEvent("mainButtonClicked", function () {
+            tg.sendData('wecwcwewcw');
+        });
+
+        // let data = $('.item');
+        // var cart = {};
+        // $.each(data, function (index, value) {
+        //     let id = $(value).attr('data-id')
+        //     let price = $(value).attr('data-price')
+        //     cart[id] = [price, 1]
+        // })
+
+        // var jsonStr = JSON.stringify(cart);
+        // sessionStorage.setItem("cart", jsonStr);
+        // var cartValue = sessionStorage.getItem("cart");
+        // var cartObj = JSON.parse(cartValue);
 
 
-        const initData = tg.initData || '';
-        const initDataUnsafe = tg.initDataUnsafe || {};
+        // const initData = tg.initData || '';
+        // const initDataUnsafe = tg.initDataUnsafe || {};
 
         // document.querySelector('#greeting').innerHTML = `Hi, ${initDataUnsafe.user.first_name}!`;
         // document.querySelector('#initData').innerHTML = JSON.stringify(initData, null, 2);
         // document.querySelector('#initDataUnsafe').innerHTML = JSON.stringify(initDataUnsafe, null, 2);
         // document.querySelector('#themeData').html(JSON.stringify(tg.themeParams, null, 2));
 
-        tg.onEvent('themeChanged', function () {
-            document.querySelector('#themeData').innerHTML = JSON.stringify(tg.themeParams, null, 2);
-        });
-
         tg.MainButton.text = "Savatga qo`shish";
 
-        function MainButtonShow(el) {
-            const mainButton = tg.MainButton;
-            mainButton.show();
-        }
+        tg.MainButton.show();
 
-        function MainButtonHide(el) {
-            const mainButton = tg.MainButton;
-            if (mainButton.isVisible) {
-                mainButton.hide();
-            }
-        }
 
-        $('.btn-add').on('click', function () {
-            $(this).hide();
-            $(this).siblings('.status').show();
-            let id = $(this).parents('.item').attr('data-id');
-            let count = cartObj[id][1]
-            $(this).parents('.footer').siblings('.image-cont').children(".count").text(count);
-            $(this).parents('.footer').siblings('.image-cont').children(".count").show();
-            MainButtonShow()
-        })
+        // function MainButtonShow(el) {
+        //     const mainButton = tg.MainButton;
+        //     mainButton.show();
+        // }
 
-        $('.plus').on('click', function () {
-            let id = $(this).parents('.item').attr('data-id');
-            let count = cartObj[id][1]
-            count++
-            cartObj[id][1] = count
-            cartObj[id][0] = cartObj[id][0] * count
-            $(this).parents('.footer').siblings('.image-cont').children(".count").text(count);
-        })
+        // function MainButtonHide(el) {
+        //     const mainButton = tg.MainButton;
+        //     if (mainButton.isVisible) {
+        //         mainButton.hide();
+        //     }
+        // }
 
-        $('.minus').on('click', function () {
-            let id = $(this).parents('.item').attr('data-id');
-            let count = cartObj[id][1]
-            --count
-            if (count < 1) {
-                $(this).parents('.status').hide();
-                $(this).parents('.status').siblings('.btn-add').show();
-                let id = $(this).parents('.item').attr('data-id');
-                cartObj[id][0] = 0
-                cartObj[id][1] = 1
-                $(this).parents('.footer').siblings('.image-cont').children(".count").hide();
-                MainButtonHide()
-            } else {
-                cartObj[id][1] = count
-                cartObj[id][0] = cartObj[id][0] * count
-                $(this).parents('.footer').siblings('.image-cont').children(".count").text(count);
-            }
-        });
+        // $('.btn-add').on('click', function () {
+        //     $(this).hide();
+        //     $(this).siblings('.status').show();
+        //     let id = $(this).parents('.item').attr('data-id');
+        //     let count = cartObj[id][1]
+        //     $(this).parents('.footer').siblings('.image-cont').children(".count").text(count);
+        //     $(this).parents('.footer').siblings('.image-cont').children(".count").show();
+        //     MainButtonShow()
+        // })
 
-        Telegram.WebApp.offEvent("mainButtonClicked", function () {
-            tg.sendData('wecwcwewcw');
-        });
+        // $('.plus').on('click', function () {
+        //     let id = $(this).parents('.item').attr('data-id');
+        //     let count = cartObj[id][1]
+        //     count++
+        //     cartObj[id][1] = count
+        //     cartObj[id][0] = cartObj[id][0] * count
+        //     $(this).parents('.footer').siblings('.image-cont').children(".count").text(count);
+        // })
+
+        // $('.minus').on('click', function () {
+        //     let id = $(this).parents('.item').attr('data-id');
+        //     let count = cartObj[id][1]
+        //     --count
+        //     if (count < 1) {
+        //         $(this).parents('.status').hide();
+        //         $(this).parents('.status').siblings('.btn-add').show();
+        //         let id = $(this).parents('.item').attr('data-id');
+        //         cartObj[id][0] = 0
+        //         cartObj[id][1] = 1
+        //         $(this).parents('.footer').siblings('.image-cont').children(".count").hide();
+        //         MainButtonHide()
+        //     } else {
+        //         cartObj[id][1] = count
+        //         cartObj[id][0] = cartObj[id][0] * count
+        //         $(this).parents('.footer').siblings('.image-cont').children(".count").text(count);
+        //     }
+        // });
         // tg.onClick(function () {
         //     tg.sendData('wecwcwewcw');
         // })
