--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             </div>
         </div>
     </div>
-    <a href="/page.html">Redirect</a>
+    <a id="c" href="/page.html">Redirect</a>
 
     <!-- <section>
         <h1 id="greeting"></h1>
@@ -262,9 +262,7 @@
             }
         });
         tg.onClick(function () {
-            // tg.sendData('wecwcwewcw');
-            location.href = window.location.origin + '/page.html';
-            $('#regular_link').attr('href', $('#regular_link').attr('href') + location.hash);
+            $('#c').text('slmwkw');
         })
 
     </script>
