--- a/index.html
+++ b/index.html
@@ -261,9 +261,8 @@
                 $(this).parents('.footer').siblings('.image-cont').children(".count").text(count);
             }
         });
-        tg.onClick(function () {
-            $('#c').text('slmwkw');
-        })
+        // tg.onClick(function () {
+        // })
 
     </script>
 </body>
