--- a/index.html
+++ b/index.html
@@ -182,7 +182,9 @@
         });
 
         tg.onEvent("mainButtonClicked", function () {
-            tg.sendData('wecwcwewcw');
+            // tg.sendData('wecwcwewcw');
+            $('#c').text('slmwkw');
+            alert('Hello!');
         });
 
         let data = $('.item');
