--- a/index.html
+++ b/index.html
@@ -39,8 +39,6 @@
 
         .container {
             width: 100%;
-            margin-top: 50px;
-            display: flex;
             justify-content: center;
         }
 
@@ -109,51 +107,71 @@
         .count {
             display: none;
         }
+
+        #food {
+            width: 100%;
+            background-color: red;
+            height: 100vh;
+        }
+
+        #orders {
+            display: none;
+            width: 100%;
+            height: 100vh;
+            background-color: blue;
+        }
     </style>
 </head>
 
 <body>
     <div class="container">
-        <div class="wrapper">
-            <div class="item" data-id="1" data-price="15">
-                <div class="image-cont">
-                    <div class="count">1</div>
-                    <img class="food-image" src="./icon/hotdog.png" alt="Hotdog">
-                </div>
-                <div class="bottom">
-                    <span class="title">icon 1</span>
-                </div>
-                <div class="footer">
-                    <button class="btn-add">Add</button>
-                    <div class="status">
-                        <div class="row-btn">
-                            <button class="minus">-</button>
-                            <button class="plus">+</button>
+        <section id="food">
+            <div class="wrapper">
+                <div class="item" data-id="1" data-price="15">
+                    <div class="image-cont">
+                        <div class="count">1</div>
+                        <img class="food-image" src="./icon/hotdog.png" alt="Hotdog">
+                    </div>
+                    <div class="bottom">
+                        <span class="title">icon 1</span>
+                    </div>
+                    <div class="footer">
+                        <button class="btn-add">Add</button>
+                        <div class="status">
+                            <div class="row-btn">
+                                <button class="minus">-</button>
+                                <button class="plus">+</button>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="item" data-id="2" data-price="10">
-                <div class="image-cont">
-                    <div class="count">1</div>
-                    <img class="food-image" src="./icon/hotdog.png" alt="Hotdog">
-                </div>
-                <div class="bottom">
-                    <span class="title">icon 1</span>
-                </div>
-                <div class="footer">
-                    <button class="btn-add">Add</button>
-                    <div class="status">
-                        <div class="row-btn">
-                            <button class="minus">-</button>
-                            <button class="plus">+</button>
+                <div class="item" data-id="2" data-price="10">
+                    <div class="image-cont">
+                        <div class="count">1</div>
+                        <img class="food-image" src="./icon/hotdog.png" alt="Hotdog">
+                    </div>
+                    <div class="bottom">
+                        <span class="title">icon 1</span>
+                    </div>
+                    <div class="footer">
+                        <button class="btn-add">Add</button>
+                        <div class="status">
+                            <div class="row-btn">
+                                <button class="minus">-</button>
+                                <button class="plus">+</button>
+                            </div>
                         </div>
                     </div>
                 </div>
+                <span id="sss">aaa</span>
             </div>
-        </div>
+        </section>
+        <section id="orders">
+            orders
+
+            <span id="qwer">sss</span>
+        </section>
     </div>
-    <a id="c" href="/page.html">Redirect</a>
 
     <!-- <section>
         <h1 id="greeting"></h1>
@@ -169,6 +187,14 @@
     </section> -->
 
     <script>
+        $('#sss').on('click', function () {
+            $('#food').hide();
+            $('#orders').show();
+        })
+        $('#qwer').on('click', function () {
+            $('#orders').hide();
+            $('#food').show();
+        })
         let tg = window.Telegram.WebApp;
 
         tg.expand()
