--- a/index.html
+++ b/index.html
@@ -188,12 +188,12 @@
 
     <script>
         $('#sss').on('click', function () {
-            $('#food').hide();
-            $('#orders').show();
+            $('#food').hide('slow');
+            $('#orders').show('slow');
         })
         $('#qwer').on('click', function () {
-            $('#orders').hide();
-            $('#food').show();
+            $('#orders').hide('slow');
+            $('#food').show('slow');
         })
         let tg = window.Telegram.WebApp;
 
