--- a/index.html
+++ b/index.html
@@ -119,6 +119,64 @@
             width: 100%;
             height: 100vh;
             background-color: blue;
+            font-family: var(--default-font);
+            background-color: var(--bg-color);
+        }
+
+        .cafe-text-field-wrap {
+            margin-top: 14px;
+        }
+
+        .cafe-text-field {
+            font-family: var(--default-font);
+            font-size: 17px;
+            line-height: 21px;
+            font-weight: 500;
+            -webkit-font-smoothing: antialiased;
+            padding: 12px 20px 13px;
+            box-sizing: border-box;
+            display: block;
+            outline: none;
+            border: none;
+            border-radius: 0;
+            resize: none;
+            color: var(--text-color);
+            -webkit-user-select: auto;
+            user-select: auto;
+            cursor: auto;
+            width: 100%;
+        }
+
+        .cafe-text-field::-webkit-input-placeholder {
+            transition: color var(--animation);
+            color: var(--placeholder-color);
+            text-overflow: ellipsis;
+        }
+
+        .cafe-text-field::-moz-placeholder {
+            transition: color var(--animation);
+            color: var(--placeholder-color);
+            text-overflow: ellipsis;
+        }
+
+        .cafe-text-field:-ms-input-placeholder {
+            transition: color var(--animation);
+            color: var(--placeholder-color);
+            text-overflow: ellipsis;
+        }
+
+        .cafe-text-field::placeholder {
+            text-overflow: ellipsis;
+        }
+
+        .cafe-text-field-hint {
+            font-family: var(--default-font);
+            font-size: 14px;
+            line-height: 18px;
+            font-weight: 500;
+            -webkit-font-smoothing: antialiased;
+            padding: 10px 20px 14px;
+            color: var(--hint-color);
         }
     </style>
 </head>
@@ -163,13 +221,17 @@
                         </div>
                     </div>
                 </div>
-                <span id="sss">aaa</span>
             </div>
         </section>
         <section id="orders">
-            orders
+            <div class="cafe-text-field-wrap">
+                <textarea class="cafe-text-field js-order-comment-field cafe-block" rows="1"
+                    placeholder="Add comment…"></textarea>
+                <div class="cafe-text-field-hint">
+                    Any special requests, details, final wishes etc.
+                </div>
+            </div>
 
-            <span id="qwer">sss</span>
         </section>
     </div>
 
@@ -189,7 +251,6 @@
     <script>
         $('#contentToglle').on('click', function () {
             let status = $(this).attr('data-status');
-            alert(status)
             if (status == 'food') {
                 $('#food').slideUp();
                 $('#orders').slideDown();
