--- a/index.html
+++ b/index.html
@@ -275,9 +275,9 @@
     </section> -->
 
     <script>
-        // let tg = window.Telegram.WebApp;
+        let tg = window.Telegram.WebApp;
 
-        // tg.expand()
+        tg.expand()
 
         // Telegram.WebApp.onEvent('themeChanged', function () {
         //     document.documentElement.className = tg.colorScheme;
