--- a/index.html
+++ b/index.html
@@ -294,12 +294,12 @@
 
         });
 
-        // Telegram.WebApp.onEvent("backButtonClicked", function () {
-        //     $('#food').slideDown();
-        //     $('#orders').slideUp();
-        //     tg.BackButton.hide();
+        Telegram.WebApp.onEvent("backButtonClicked", function () {
+            $('#food').slideDown();
+            $('#orders').slideUp();
+            tg.BackButton.hide();
 
-        // });
+        });
 
         tg.MainButton.text = "Savatga qo`shish";
         // tg.MainButton.showProgress(true);
@@ -348,39 +348,39 @@
             MainButtonShow()
         })
 
-        $('.plus').on('click', function () {
-            let id = $(this).parents('.item').attr('data-id');
-            let count = cartObj[id][1]
-            count++
-            cartObj[id][1] = count
-            cartObj[id][0] = cartObj[id][0] * count
-            $(this).parents('.footer').siblings('.image-cont').children(".count").text(count);
-        })
+        // $('.plus').on('click', function () {
+        //     let id = $(this).parents('.item').attr('data-id');
+        //     let count = cartObj[id][1]
+        //     count++
+        //     cartObj[id][1] = count
+        //     cartObj[id][0] = cartObj[id][0] * count
+        //     $(this).parents('.footer').siblings('.image-cont').children(".count").text(count);
+        // })
 
-        $('.minus').on('click', function () {
-            let id = $(this).parents('.item').attr('data-id');
-            let count = cartObj[id][1]
-            --count
-            if (count < 1) {
-                $(this).parents('.status').hide();
-                $(this).parents('.status').siblings('.btn-add').show();
-                let id = $(this).parents('.item').attr('data-id');
-                cartObj[id][0] = 0
-                cartObj[id][1] = 1
-                $(this).parents('.footer').siblings('.image-cont').children(".count").hide();
-                MainButtonHide()
-            } else {
-                cartObj[id][1] = count
-                cartObj[id][0] = cartObj[id][0] * count
-                $(this).parents('.footer').siblings('.image-cont').children(".count").text(count);
-            }
-        });
+        // $('.minus').on('click', function () {
+        //     let id = $(this).parents('.item').attr('data-id');
+        //     let count = cartObj[id][1]
+        //     --count
+        //     if (count < 1) {
+        //         $(this).parents('.status').hide();
+        //         $(this).parents('.status').siblings('.btn-add').show();
+        //         let id = $(this).parents('.item').attr('data-id');
+        //         cartObj[id][0] = 0
+        //         cartObj[id][1] = 1
+        //         $(this).parents('.footer').siblings('.image-cont').children(".count").hide();
+        //         MainButtonHide()
+        //     } else {
+        //         cartObj[id][1] = count
+        //         cartObj[id][0] = cartObj[id][0] * count
+        //         $(this).parents('.footer').siblings('.image-cont').children(".count").text(count);
+        //     }
+        // });
 
-        $('#edit').on('click', function () {
-            $('#food').slideDown();
-            $('#orders').slideUp();
-            tg.BackButton.hide();
-        })
+        // $('#edit').on('click', function () {
+        //     $('#food').slideDown();
+        //     $('#orders').slideUp();
+        //     tg.BackButton.hide();
+        // })
     </script>
 </body>
 
